src/objects/CBL_Farm__c.object
<CustomObject>
    <fields>
        <fullName>farmCode__c</fullName>
        <label>farmCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>farmCountry__c</fullName>
        <label>farmCountry</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>farmDepartment__c</fullName>
        <label>farmDepartment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>farmDistrict__c</fullName>
        <label>farmDistrict</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>farmLocation__c</fullName>
        <label>farmLocation</label>
        <picklist>
            <picklistValues>
                <fullName>dpto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>farmManagmtDocuments__c</fullName>
        <label>farmManagmtDocuments</label>
        <picklist>
            <picklistValues>
                <fullName>Plan de Manejo de Almácigos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan y registro de Fertilización</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan y registro de Podas de café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Renovación de cafetales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan de conservación de suelos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan de manejo de sombra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan de MIPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registro de insumos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registro de Fertilizacion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registro de producción abonos orgánicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registro de Podas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registro ventas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registro compras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registro de jornales contrarados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Aplica</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>farmMgmtDocsComplete__c</fullName>
        <label>farmMgmtDocsComplete</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Aplica</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>farmMunicipality__c</fullName>
        <label>farmMunicipality</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>farmName__c</fullName>
        <label>farmName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>farmOwnership__c</fullName>
        <label>farmOwnership</label>
        <picklist>
            <picklistValues>
                <fullName>Propia con escritura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En arriendo o alquiler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En usufructo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ocupante de hecho o Poseedor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propiedad comunal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derecho heredado o intestado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>farmPermanentStaff__c</fullName>
        <label>farmPermanentStaff</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>farmWaterBodies__c</fullName>
        <label>farmWaterBodies</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>farm_Area_Ha__c</fullName>
        <description>Converts all the farm sizes to Hectares, by using farm area and the chosen unit</description>
        <formula>IF(text( totalFarmAreaUnits__c ) = &quot;Cuadras&quot;, totalFarmArea__c *1.5625, 
IF(text( totalFarmAreaUnits__c ) = &quot;Manzanas&quot;, totalFarmArea__c  *0.6988, 
IF(text( totalFarmAreaUnits__c ) =&quot;Cuerdas (25x25)&quot;, totalFarmArea__c  *0.044, 
IF(text( totalFarmAreaUnits__c ) =&quot;Cuerdas (40x40)&quot;, totalFarmArea__c   *0.112, totalFarmArea__c  ))))</formula>
        <label>Farm area (Ha)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fertAcordingSoilAnalysis__c</fullName>
        <label>fertAcordingSoilAnalysis</label>
        <picklist>
            <picklistValues>
                <fullName>Fertiliza basado en análisis de suelo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fertiliza no basado en análisis de suelo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No fertiliza</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fertilizerApplicationsLastYr__c</fullName>
        <label>fertilizerApplicationsLastYr</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fertilizerManufactureCriteria__c</fullName>
        <label>fertilizerManufactureCriteria</label>
        <picklist>
            <picklistValues>
                <fullName>Relación Carbono/Nitrógeno 25:1-40:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temperatura entre 55C y 75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Se hacen los volteos requeridos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno de los anteriores</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>foliarFertilizerUseLastYr__c</fullName>
        <label>foliarFertilizerUseLastYr</label>
        <picklist>
            <picklistValues>
                <fullName>No aplica fertilización foliar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguas mieles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extractos botánicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lixiviados de lombricompost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foliares en base a químicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sulfato de cobre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sulfato de zinc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sulfato de magnesio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayfolan Forte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutrex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Triple 20 (JISAfol)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Triple 20 (Supersol)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poly-Feed GG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metalosato Crop up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metalosato Tropical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metalosato Zinc Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metalosato Potasio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metalosato MZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metalosatos especificos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>forcedLabor__c</fullName>
        <label>forcedLabor</label>
        <picklist>
            <picklistValues>
                <fullName>Hay trabajo forzado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No hay trabajo forzado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hay prácticas de retención</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No hay prácticas de retención</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hay empleados ilegales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No hay empleados ilegales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Se les retiene su identificación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No se les retiene su identificación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pagan un depósito para poder trabajar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No pagan depósitos para poder trabajar</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>forestArea__c</fullName>
        <label>forestArea</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>heightMainShadeColumn__c</fullName>
        <label>heightMainShadeColumn</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>highIncidenceDiseases__c</fullName>
        <label>highIncidenceDiseases</label>
        <picklist>
            <picklistValues>
                <fullName>Mal de talluelo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ojo de gallo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cercóspora o Mancha de hierro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antracnósis o Muerte descendente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mal rosado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Koleroga o Mal de Hilchas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mal de viñas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancer de tronco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fumagina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No tiene problemas con enfermedades</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>highIncidencePlagues__c</fullName>
        <label>highIncidencePlagues</label>
        <picklist>
            <picklistValues>
                <fullName>Broca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nemátodos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cochinillas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Araña roja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minador de la hoja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barrenador del tallo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallina ciega</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>hiresUnderAge__c</fullName>
        <label>hiresUnderAge</label>
        <picklist>
            <picklistValues>
                <fullName>Sí, de menos de 14 años</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sí, entre 14 y 17 años</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No contrato a menores de 18 años</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Aplica</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>hires_RegistersTempStaff__c</fullName>
        <label>hires&amp;RegistersTempStaff</label>
        <picklist>
            <picklistValues>
                <fullName>Si contrata y tiene registros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si contrata y no tiene registros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No contrata</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>howDoesDiseaseControl__c</fullName>
        <label>howDoesDiseaseControl</label>
        <picklist>
            <picklistValues>
                <fullName>Variedades resistentes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulando distanciamientos y sombra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controlando malezas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Podas y renovación de cafetales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uso de fungicidas sistémicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uso de fungicidas de contacto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No las controla</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>howDoesPlagueControl__c</fullName>
        <label>howDoesPlagueControl</label>
        <picklist>
            <picklistValues>
                <fullName>Control biológico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control físico /uso de trampas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insecticidas botánicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insecticidas químicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No hace nada para controlarlas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uso de injerto sobre patrón robusta</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>identifiesHarvestedCoffee__c</fullName>
        <label>identifiesHarvestedCoffee</label>
        <picklist>
            <picklistValues>
                <fullName>Adecuadamente identificado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Con documentación/registros de soporte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adecuadamente separado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No hay adecuadas medidas de trazabilidad</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>lastSoilSampling__c</fullName>
        <label>lastSoilSampling</label>
        <picklist>
            <picklistValues>
                <fullName>hace más de 3 años</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>entre  2 y 3 años</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>entre 1-2 años</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>menos de 1 año</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>lastYearTemporaryWages__c</fullName>
        <label>lastYearTemporaryWages</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lotsWithCoffeePlanted__c</fullName>
        <label>lotsWithCoffeePlanted</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>majorNonConformances__c</fullName>
        <label>majorNonConformances</label>
        <picklist>
            <picklistValues>
                <fullName>Uso de insumos no permitidos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contaminación indirecta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manejo no adecuado de agroquímicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contaminación biológica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contaminación de fuentes de agua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple requisitos de sombra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mezcla café certificado y no certificado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trabajo infantil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple condiciones laborales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taló bosque natural para sembrar café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditoría interna aprobada</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>maxHeightShade__c</fullName>
        <label>maxHeightShade</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newPlantedAreaUnits__c</fullName>
        <label>newPlantedAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (25x25)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (40x40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>newPlantedArea__c</fullName>
        <label>newPlantedArea</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nonConformancePicURL__c</fullName>
        <label>nonConformancePicURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>nonConformancePic__c</fullName>
        <formula>IMAGE( nonConformancePicURL__c , &quot;&quot;)</formula>
        <label>nonConformancePic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>numberOfShadeSpecies__c</fullName>
        <label>numberOfShadeSpecies</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>organicFertApplicationsLastYr__c</fullName>
        <label>organicFertApplicationsLastYr</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>organicFertAreaThisYrUnits__c</fullName>
        <label>organicFertAreaThisYrUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (25x25)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (40x40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>organicFertAreaThisYr__c</fullName>
        <label>organicFertAreaThisYr</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>organicFertilizerIngredients__c</fullName>
        <label>organicFertilizerIngredients</label>
        <picklist>
            <picklistValues>
                <fullName>Pulpa de café orgánico o natural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulpa de café cultivado con agroquímicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estiércoles orgánicos o naturales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estiércoles de granjas convencionales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material vegetal orgánico o natural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material vegetal convencional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microorganismos benéficos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minerales naturales permitidos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minerales o sustancias no permitidas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>organicFertilizersLastYr__c</fullName>
        <label>organicFertilizersLastYr</label>
        <picklist>
            <picklistValues>
                <fullName>No aplica fertilizantes orgánicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compost (de deshechos animal o vegetal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lombricompost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bocashi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deshechos animal/vegetal sin compostear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estiércoles de animales (Composteados)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estiércol de animales (Sin compostear)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materia orgánica vegetal (composteados)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materia orgánica vegetal-Sin compostear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uso de microorganismos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>organicStatus__c</fullName>
        <label>organicStatus</label>
        <picklist>
            <picklistValues>
                <fullName>T1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>organic_fertilized_area_ha__c</fullName>
        <formula>IF(text( organicFertAreaThisYrUnits__c ) = &quot;Cuadras&quot;,  organicFertAreaThisYr__c *1.5625, 
IF(text( organicFertAreaThisYrUnits__c ) = &quot;Manzanas&quot;, organicFertAreaThisYr__c *0.6988, 
IF(text( organicFertAreaThisYrUnits__c )=&quot;Cuerdas (25x25)&quot;, organicFertAreaThisYr__c *0.044, 
IF(text( organicFertAreaThisYrUnits__c )=&quot;Cuerdas (40x40)&quot;, organicFertAreaThisYr__c *0.112, organicFertAreaThisYr__c ))))</formula>
        <label>Organic fertilized area (Ha)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>otherActivitiesAreaUnits__c</fullName>
        <label>otherActivitiesAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (25x25)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (40x40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>otherActivitiesArea__c</fullName>
        <label>otherActivitiesArea</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>otherChemicalFertilizers__c</fullName>
        <label>otherChemicalFertilizers</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>otherDiseaseControlAgrochem__c</fullName>
        <label>otherDiseaseControlAgrochem</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>otherDiseaseControlOrganicProd__c</fullName>
        <label>otherDiseaseControlOrganicProd</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>otherDiseaseControl__c</fullName>
        <label>otherDiseaseControl</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>otherFoliarFertilizerLastYr__c</fullName>
        <label>otherFoliarFertilizerLastYr</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>otherHighDisease__c</fullName>
        <label>otherHighDisease</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>otherHighIncidencePlagues__c</fullName>
        <label>otherHighIncidencePlagues</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>otherOrganicFertIngredients__c</fullName>
        <label>otherOrganicFertIngredients</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>otherOrganizFertilizers__c</fullName>
        <label>otherOrganizFertilizers</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>otherPlagueCtrlAgrochemicals__c</fullName>
        <label>otherPlagueCtrlAgrochemicals</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>otherProdSoilTreatment__c</fullName>
        <label>otherProdSoilTreatment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>otherWeedsCtrlHerbicides__c</fullName>
        <label>otherWeedsCtrlHerbicides</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>percErosionZoneRiskPrevention__c</fullName>
        <label>percErosionZoneRiskPrevention</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>percShadeDominantSpecie__c</fullName>
        <label>percShadeDominantSpecie</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>percShadeFruitTrees__c</fullName>
        <label>percShadeFruitTrees</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>percShadeLeguminous__c</fullName>
        <label>percShadeLeguminous</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>percShadeNativeSpecies__c</fullName>
        <label>percShadeNativeSpecies</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>percWithoutShade__c</fullName>
        <label>percWithoutShade</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>percentageShade__c</fullName>
        <label>percentageShade</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>permWorkersMinimumMonthWage__c</fullName>
        <label>permWorkersMinimumMonthWage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>physicalOralSexualAbuse__c</fullName>
        <label>physicalOralSexualAbuse</label>
        <picklist>
            <picklistValues>
                <fullName>De acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medianamente de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En desacuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>plagueControlAgroChemicals__c</fullName>
        <label>plagueControlAgroChemicals</label>
        <picklist>
            <picklistValues>
                <fullName>No usa ningún producto químico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thiodan 35% (Endosulfan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lorsban 48 EC (Clorpirifós)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temik 15G (Aldicarb)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furadan 10G (Carbofuran)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mocap 15G (Ethoprop)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nemacur 10G (Fenamifos)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter 10 G (Terbufós)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decis 2.5 EC (Deltametrina)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malathion 50 EC (MALATION O,O-Dimetil)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>